[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superr-venn"
version = "0.1.0"
description = "Error analysis tool to compare ML models (SuperrVenn)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Jeffrey Feng", email = "jeffreyfeng@mednet.ucla.edu"}
]
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pillow>=11",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
packages = ["superr_venn"]